--- a/pytest.ini
+++ b/pytest.ini
@@ -3,5 +3,6 @@ python_files = test_*.py *_test.py
 python_classes = Test*
 python_functions = test_*
 markers=
-    users: Маркировка для тестов связанных с пользователями._test
-    regression: Маркировка для регрессионных тестов
+    users: Маркировка для тестов связанных с пользователями.
+    regression: Маркировка для регрессионных тестов.
+    authentication: Маркировка для тестов связанных с аутентификацией.
